# open-trading-api

./: .env.example  .gitignore  DESIGN.md  PROFILE.md  Pipfile  README.md  SESSION_HANDOFF_EMERGENCY.md  auto_paper_trading.py  auto_paper_trading2.py  kis_devlp.yaml  llms.txt  main.py  preset_files.py  pyproject.toml  requirements.txt  simple_backtest_doosan.py  simple_backtest_samsung.py  token_cache.json  untitled2.py
MCP/KIS Code Assistant MCP/: .dockerignore  .gitignore  .npmignore  Dockerfile  LICENSE  README.md  data.csv  package.json  pyproject.toml  server.py
MCP/Kis Trading MCP/: .dockerignore  .env.live  .gitignore  Dockerfile  Readme.md  content.md  pyproject.toml  server.py
MCP/Kis Trading MCP/configs/: auth.json  domestic_bond.json  domestic_futureoption.json  domestic_stock.json  elw.json  etfetn.json  overseas_futureoption.json  overseas_stock.json
MCP/Kis Trading MCP/model/: __init__.py  auth.py  base.py  domestic_bond.py  domestic_futureoption.py  domestic_stock.py  elw.py  etfetn.py  overseas_futureoption.py  overseas_stock.py  updated.py
MCP/Kis Trading MCP/module/: __init__.py  decorator.py  factory.py  mcp_auth.py  middleware.py
MCP/Kis Trading MCP/tests/: test_api_executor_security.py
MCP/Kis Trading MCP/tools/: __init__.py  auth.py  base.py  domestic_bond.py  domestic_futureoption.py  domestic_stock.py  elw.py  etfetn.py  overseas_futureoption.py  overseas_stock.py
backtester/: .env.example  .gitignore  README.md  kis_auth.py  kis_devlp.yaml  pyproject.toml  start.sh
backtester/backend/: __init__.py  main.py  state.py
backtester/backend/routes/: __init__.py  auth.py  backtest.py  files.py  strategies.py  (+1 more)
backtester/examples/: README.md  basic_backtest.py  expert_strategies.py  live_trading.py  optimization.py  portfolio_analysis.py  rule_builder.py  strategy_generation.py  yaml_strategy.py
backtester/frontend/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json
backtester/kis_backtest/: __init__.py  client.py  exceptions.py
backtester/kis_mcp/: __init__.py  schemas.py  server.py
backtester/scripts/: download_master.py  setup_lean_data.sh  start_mcp.sh
backtester/tests/: conftest.py  test_api.py  test_brokerage.py  test_core_schema.py
strategy_builder/: .gitignore  README.md  kis_auth.py  pyproject.toml  start.sh
strategy_builder/backend/: __init__.py  main.py  state.py
strategy_builder/core/: __init__.py  candlestick.py  data_fetcher.py  indicators.py  order_executor.py  position_manager.py  risk_manager.py  signal.py  websocket_manager.py
strategy_builder/examples/: README.md  run_all_strategies.py
strategy_builder/frontend/: .env.example  next.config.ts  package-lock.json  package.json
strategy_builder/strategy/: __init__.py  base_strategy.py  strategy_01_golden_cross.py  strategy_02_momentum.py  strategy_03_week52_high.py  strategy_04_consecutive.py  strategy_05_disparity.py  strategy_06_breakout_fail.py  strategy_07_strong_close.py  strategy_08_volatility.py  strategy_09_mean_reversion.py  strategy_10_trend_filter.py
strategy_builder/strategy_core/: __init__.py  executor.py  name_utils.py  registry.py
strategy_builder/tests/: conftest.py  test_api.py  test_websocket_manager.py
(+2298 files in other folders)
